# py-haproxy-api

./: .editorconfig  .gitignore  .mdlrc  .pre-commit-config.yaml  LICENSE  README.md  md_style.rb  requirements.txt  setup.cfg  setup.py
dev/: Makefile  README.md  requirements.txt
doc/: happi.md
src/happi/: __init__.py
src/happi/client/: __init__.py  __main__.py
src/happi/client/processor/: __init__.py
src/happi/client/processor/servers/: __init__.py  state.py
src/happi/core/: __init__.py  auto_name.py  http_return_code.py  logger.py  quiet_enum_meta.py  server_state.py
src/happi/server/: __init__.py  __main__.py
src/happi/server/router/: __init__.py  resource.py
src/happi/server/router/servers/: __init__.py  state.py
src/happi/socket/: __init__.py  __main__.py
