[metadata]
name = hapi
url = https://github.com/zombig/hapi
project_urls =
  Code = https://github.com/zombig/hapi
  Issue tracker = https://github.com/zombig/hapi
license = MIT
author = zombig
maintainer = zombig
maintainer_email = hapi@zombig.name
description = Simple wrapper for HAProxy API
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Programming Language :: Python
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.8

[options.packages.find]
where = src
